# bag_analyse

./: .gitignore  .gitlab-ci.yml  CMakeLists.txt  Dockerfile  README.md  package.xml  setup.py
scripts/: BagDB.py  BagDBAnalysis.py  BagDataType.py  DataContainer.py  GNSS.py  IMU.py  IbeoDB.py  Odometry.py  PandasAnalysis.py  Statistics.py  VehicleState.py  bag-analyse.py  correct_time.py  multi-bag-analyse.py  rosbag-analysis.py  settings.yml  test-bagdb.py
sql/: create_message_data_table.sql
src/: BagDataType.py  DataContainer.py  ROSBagAnalysis.py  analysis.py  bag-analyse.py  rosbag-analysis.py
src/bag_analysis/: BagDB.py  BagDataType.py  ControllerDebug.py  DataContainer.py  GNSS.py  IMU.py  JointStates.py  Odometry.py  PandasAnalysis.py  Statistics.py  VehicleCommands.py
